--- a/frontend/app/views/archival_objects/_form_container.html.erb
+++ b/frontend/app/views/archival_objects/_form_container.html.erb
@@ -1,4 +1,4 @@
-<h2><%= @archival_object.title %></h2>
+<h2><%= @archival_object.title %>  <span class="label label-info">Archival Object</span></h2>
 <br/>
 <%= render "shared/form_messages", :object => @archival_object, :errors => @errors, :warnings => @warnings %>
 <div class="tabbable">
