--- a/frontend/app/views/collections/_form_container.html.erb
+++ b/frontend/app/views/collections/_form_container.html.erb
@@ -1,5 +1,5 @@
 <h2>
-   <%= @collection.title.blank? ? "New Collection" : @collection.title %>
+   <%= @collection.title.blank? ? "New Collection" : @collection.title %>  <span class="label label-info">Collection</span>
 </h2>
 <br/>
 <%= render "shared/form_messages", :object => @collection, :errors => @errors, :warnings => @warnings %>
