--- a/frontend/app/views/archival_objects/forms/_basic_information.html.erb
+++ b/frontend/app/views/archival_objects/forms/_basic_information.html.erb
@@ -1,2 +1,2 @@
 <%= f.label_field_pair :title, f.text_field(:title) %>
-<%= f.label_field_pair :id_0, f.text_field(:id_0, :size=>10)+f.text_field(:id_1, :size=>10)+f.text_field(:id_2, :size=>10)+f.text_field(:id_3, :size=>10), {:control_class=>"identifier-fields", :show_errors_for=>[:id_0, :id_1, :id_2, :id_3]} %>
+<%= f.label_and_fourpartid :id_0 %>
