--- a/frontend/app/views/accessions/_form.html.erb
+++ b/frontend/app/views/accessions/_form.html.erb
@@ -1,13 +1,11 @@
 <%= render "shared/form_messages", :object => @accession, :errors => @errors, :warnings => @warnings %>
 
 <fieldset>
-   <%= f.label_field_pair :title, f.text_field(:title), {:errors=>@errors, :warnings=>@warnings} %>
+   <%= f.label_field_pair :title %>
    <%= f.label_and_fourpartid :id_0 %>
-   <%# f.label_field_pair :publish, "<label class='checkbox'>#{f.check_box :publish} #{I18n.t(:"accession.publish_help")}</label>" %>
-   <%# f.label_field_pair :restrictions, "<label class='checkbox'>#{f.check_box :restrictions}</label>" %>
-   <%= f.label_field_pair :accession_date, f.text_field(:accession_date, :placeholder=>"YYYY-MM-DD", :value=>(@accession.accession_date.blank? ? "" : Date.strptime(@accession.accession_date, "%Y-%m-%d"))), {:errors=>@errors, :warnings=>@warnings} %>
-   <%= f.label_field_pair :content_description, f.text_area(:content_description, :rows=>3), {:errors=>@errors, :warnings=>@warnings} %>
-   <%= f.label_field_pair :condition_description, f.text_area(:condition_description, :rows=>3), {:errors=>@errors, :warnings=>@warnings} %>
+   <%= f.label_field_pair :accession_date, f.text_field(:accession_date, :placeholder=>"YYYY-MM-DD", :value=>(@accession.accession_date.blank? ? "" : Date.strptime(@accession.accession_date, "%Y-%m-%d"))) %>
+   <%= f.label_field_pair :content_description, f.text_area(:content_description, :rows=>3) %>
+   <%= f.label_field_pair :condition_description, f.text_area(:condition_description, :rows=>3) %>
    
     <hr />
     
