--- a/frontend/app/views/subjects/_form.html.erb
+++ b/frontend/app/views/subjects/_form.html.erb
@@ -1,7 +1,7 @@
 <%= render "shared/form_messages", :object => @subject %>
 <fieldset>
-   <%= f.label_field_pair :term, f.text_field(:term) %>
-   <%= f.label_field_pair :term_type, f.text_field(:term_type) %>
+   <%= f.label_field_pair :term %>
+   <%= f.label_field_pair :term_type %>
 </fieldset>
 <div class="form-actions">            
    <button type="submit" class="btn btn-primary">Save Subject</button>   
