add basic linker widget to allow adding of subjects to an AO

--- a/frontend/app/assets/stylesheets/archivesspace/form.less
+++ b/frontend/app/assets/stylesheets/archivesspace/form.less
@@ -25,3 +25,17 @@
   margin-left: 4px;
   float: right;
 }
+
+.linker-list ul {
+   margin: 0;
+   list-style: none;
+}
+.linker-list li {
+   padding:0;
+}
+.linker-list label {
+   padding: 5px;
+}
+.linker-list label:hover {
+   background-color: #F1f1f1;
+}
