--- a/frontend/app/views/collections/edit.html.erb
+++ b/frontend/app/views/collections/edit.html.erb
@@ -7,6 +7,6 @@
     </div> <!-- well -->
    </div> <!-- span3 -->
    <div class="span9">
-      <div id="object_container"></div>
+      <div id="object_container" class="dynamic-content"></div>
    </div>
 </div>
