change linker widget to a tokenized typeahead field

--- a/frontend/app/assets/stylesheets/archivesspace.less
+++ b/frontend/app/assets/stylesheets/archivesspace.less
@@ -1,4 +1,5 @@
 @import "archivesspace/common";
 @import "archivesspace/header";
+@import "archivesspace/token-input";
 @import "archivesspace/form";
 @import "archivesspace/tree";
