--- a/frontend/app/views/shared/_templates.html.erb
+++ b/frontend/app/views/shared/_templates.html.erb
@@ -64,3 +64,9 @@
       
    {/if}
 --></div>
+<div id="linker_selectedtoken_template"><!--
+   <li>
+      <input type="hidden" name="${config.owner_class}[${config.owner_attribute}][]" value="${item.id}" />
+      ${item.name}
+   </li>
+--></div>
