--- a/frontend/app/views/archival_objects/forms/_basic_information.html.erb
+++ b/frontend/app/views/archival_objects/forms/_basic_information.html.erb
@@ -6,6 +6,8 @@
 <div class="control-group">
    <label class="control-label">Subjects</label>
    <div class="controls">
-      <div class="linker" data-class="subject" data-owner_class="archival_object" data-owner_attribute="subjects" data-multiplicity="many" data-url="<%= url_for :controller=>:subjects, :action=>:list, :format=>:json %>" data-format="${term} (${term_type})" data-name="Subject" data-name_plural="Subjects" data-selected='<%= @archival_object.subjects.blank? ? "[]" : @archival_object.subjects.to_json %>'></div>
+      <!-- <div class="linker" data-class="subject" data-owner_class="archival_object" data-owner_attribute="subjects" data-multiplicity="many"  data-format="${term} (${term_type})" data-name="Subject" data-name_plural="Subjects" >
+       </div>-->
+       <input type="text" class="linker" data-owner_class="archival_object" data-owner_attribute="subjects" data-url="<%= url_for :controller=>:subjects, :action=>:list, :format=>:json %>" data-selected='<%= @archival_object.subjects.blank? ? "[]" : @archival_object.subjects.to_json %>' data-format="${term} (${term_type})" />
    </div>
 </div>
