--- a/frontend/app/views/subjects/new.html.erb
+++ b/frontend/app/views/subjects/new.html.erb
@@ -8,6 +8,10 @@
       <br/>
       <%= form_for @subject, :as => "subject", :url=>{:action=>:create}, :html=>{:class=>'form-horizontal'} do |f| %>
          <%= render :partial=>"subjects/form", :locals=>{:f => f} %>
+         <div class="form-actions">            
+            <button type="submit" class="btn btn-primary">Save Subject</button>   
+            <%= link_to "Cancel", :back, :class=>"btn btn-cancel" %>
+         </div>
       <% end %>
    </div>
 </div>
