--- a/frontend/app/views/archival_objects/forms/_basic_information.html.erb
+++ b/frontend/app/views/archival_objects/forms/_basic_information.html.erb
@@ -14,7 +14,7 @@
              <a class="btn dropdown-toggle last" data-toggle="dropdown" href="javascript:void(0);"><span class="caret"></span></a>
               <ul class="dropdown-menu">
                  <li><a href="javascript:void(0);" class="linker-browse-btn">Browse</a></li>
-                 <!-- <li><a href="javascript:void(0);" class="linker-create-btn">Create</a></li>-->
+                 <li><a href="javascript:void(0);" class="linker-create-btn">Create</a></li>
               </ul>
           </div>
        </div>
