fix create AO breaking on rendering non-resolved subjects; focus form field upon show form (from tree);

--- a/frontend/app/assets/javascripts/collections.edit.js.erb
+++ b/frontend/app/assets/javascripts/collections.edit.js.erb
@@ -76,7 +76,9 @@ $(function() {
             $(".btn-primary", $form).removeAttr("disabled");
           }
        });
-       
+
+       $form.find(":input:not(:hidden):first").focus()
+
        $container.triggerHandler("form.loaded");
   };
    
