--- a/frontend/app/assets/javascripts/collections.edit.js.erb
+++ b/frontend/app/assets/javascripts/collections.edit.js.erb
@@ -13,7 +13,7 @@ $(function() {
         $tree.html(AS.renderTemplate("tree_template", {tree: collection_tree_data}));
      }
 
-    var rerenderTree = function() {
+    var rerenderTree = function(callback) {
         var selected_node_id = $(".selected", $tree).attr("id");
         
         if (selected_node_id === "newAO") {
@@ -27,7 +27,7 @@ $(function() {
 
             $("#"+selected_node_id, $tree).addClass("selected");
 
-            initTree();
+            initTree(callback);
         });
     };
    
@@ -50,6 +50,19 @@ $(function() {
           $(".btn-cancel", $form).removeAttr("disabled");
       });
 
+      $("#createPlusOne", $form).click(function() {
+         $form.triggerHandler("submit");
+         $container.one("submit.success", function() {
+            // if parent is a collection add +1 as a child
+            if ($(".selected", $tree).parents("li:first").hasClass("collection")) {
+               $(".archives-tree-container .add-child-archival-object-analog").trigger("click");
+            } else {
+               // else add +1 as a sibling
+               $(".archives-tree-container .add-sibling-archival-object-analog").trigger("click");
+            }
+         });
+      });
+
       $form.ajaxForm({
           data: {
              inline: true
@@ -67,8 +80,9 @@ $(function() {
                    changeHashSilently("#archival_object_" + $(response).find("#ao_id").val());
                 }
                 form_changed = false;
-                rerenderTree();
-                $container.triggerHandler("submit.success");
+                rerenderTree(function() {
+                   $container.triggerHandler("submit.success");
+                });                
              }
           }, 
           error: function(obj, errorText, errorDesc) {
@@ -86,7 +100,8 @@ $(function() {
          if (nodeEl.attr("id") === "newAO") {
             
             var data = {
-               collection: collection_tree_data.collection_id
+               collection: collection_tree_data.collection_id,
+               inline: true
             };
 
             var $parentNodeEl = nodeEl.parents("li:first");
@@ -185,7 +200,7 @@ $(function() {
             return;
          }
 
-         $tree.jstree("create_node", $selected, "last", {"attr":{"id": "newAO"}, "data": {"title": "New Analog Object"}});
+         $tree.jstree("create_node", $selected, "last", {"attr":{"id": "newAO"}, "data": {"title": "New Archival Object"}});
          $("#newAO", $tree).addClass("analog").attr("rel", "archival_object");
          location.hash = "#newAO";
       });
@@ -196,7 +211,7 @@ $(function() {
             return;
          }
          
-         $tree.jstree("create_node", $selected.parents("li:first"), "last", {"attr":{"id": "newAO"}, "data": {"title": "New Analog Object"}});
+         $tree.jstree("create_node", $selected.parents("li:first"), "last", {"attr":{"id": "newAO"}, "data": {"title": "New Archival Object"}});
          $("#newAO", $tree).addClass("analog").attr("rel", "archival_object");
          location.hash = "#newAO";
       });
