--- a/frontend/app/assets/stylesheets/archivesspace/form.less
+++ b/frontend/app/assets/stylesheets/archivesspace/form.less
@@ -23,6 +23,10 @@
   float: right;
 }
 
+.form-actions .btn-submit-group {
+   float: left;
+}
+
 #save_and_finish_editing {
   margin-left: 4px;
   float: right;
