--- a/frontend/app/views/archival_objects/new.html.erb
+++ b/frontend/app/views/archival_objects/new.html.erb
@@ -12,6 +12,10 @@
    <div class="span9" id="archival_object_container">
       <%= form_for @archival_object, :as => "archival_object", :url=>{:action=>:create}, :html=>{:class=>'form-horizontal'} do |f| %>
          <%= render :partial=>"archival_objects/form_container", :locals=>{:f => f} %>
+         <div class="form-actions">            
+            <button type="submit" class="btn btn-primary">Save Archival Object</button>
+            <%= link_to "Cancel", :back, :class=>"btn btn-cancel" %>
+         </div>
       <% end %>
    </div>
 </div>
