--- a/frontend/app/views/collections/_edit_inline.html.erb
+++ b/frontend/app/views/collections/_edit_inline.html.erb
@@ -1,3 +1,7 @@
 <%= form_for @collection, :as => "collection", :url=>{:action=>:update}, :html=>{:class=>'form-horizontal'} do |f| %>
    <%= render :partial=>"collections/form_container", :locals=>{:f => f} %>
+   <div class="form-actions">            
+      <button type="submit" class="btn btn-primary">Save Collection</button>   
+      <%= link_to "Cancel", :back, :class=>"btn btn-cancel" %>
+   </div>
 <% end %>
