--- a/frontend/app/views/collections/new.html.erb
+++ b/frontend/app/views/collections/new.html.erb
@@ -8,6 +8,10 @@
    <div class="span9" id="archival_object_container">
       <%= form_for @collection, :as => "collection", :url=>{:action=>:create}, :html=>{:class=>'form-horizontal'} do |f| %>
          <%= render :partial=>"collections/form_container", :locals=>{:f => f} %>
+         <div class="form-actions">            
+            <button type="submit" class="btn btn-primary">Create Collection</button>   
+            <%= link_to "Cancel", :back, :class=>"btn btn-cancel" %>
+         </div>
       <% end %>
    </div>
 </div>
