--- a/frontend/app/assets/javascripts/collections.edit.js.erb
+++ b/frontend/app/assets/javascripts/collections.edit.js.erb
@@ -52,7 +52,7 @@ $(function() {
 
       $("#createPlusOne", $form).click(function() {
          $form.triggerHandler("submit");
-         $container.one("submit.success", function() {
+         $container.off("submit.success").on("submit.success", function() {
             // if parent is a collection add +1 as a child
             if ($(".selected", $tree).parents("li:first").hasClass("collection")) {
                $(".archives-tree-container .add-child-archival-object-analog").trigger("click");
@@ -70,7 +70,7 @@ $(function() {
           beforeSubmit: function() {
             $(".btn-primary", $form).attr("disabled","disabled");
           },
-          success: function(response, status, xhr) {             
+          success: function(response, status, xhr) {
              initForm(response);
 
              if ($container.find(".alert-error:first, .alert-warning:first").length) {
