--- a/frontend/app/views/archival_objects/display/_basic_information.html.erb
+++ b/frontend/app/views/archival_objects/display/_basic_information.html.erb
@@ -2,11 +2,9 @@
    <div class="span3">Title</div>
    <div class="span9"><%= @archival_object.title %></div>
 </div>
-<div class="row-fluid label-and-value">
-   <div class="span3">Identifier</div>
-   <div class="span9 identifier-display">
-      <span class="identifier-display-part"><%= @archival_object.id_0 %></span><span class="identifier-display-part"><%= @archival_object.id_1 %></span><span class="identifier-display-part"><%= @archival_object.id_2 %></span><span class="identifier-display-part"><%= @archival_object.id_3 %></span>
-   </div>
+<div class="row-fluid label-and-value identifier-display">
+   <div class="span3">Ref ID</div>
+   <div class="span9"><span class="identifier-display-part"><%= @archival_object.ref_id %></span></div>
 </div>
 <% if @archival_object.subjects %>
 <hr/>
