--- a/frontend/app/views/collections/_show_inline.html.erb
+++ b/frontend/app/views/collections/_show_inline.html.erb
@@ -15,6 +15,12 @@
           <div class="span3">Title</div>
           <div class="span9"><%= @collection.title %></div>
        </div>
+       <div class="row-fluid label-and-value">
+          <div class="span3">Identifier</div>
+          <div class="span9 identifier-display">
+             <span class="identifier-display-part"><%= @collection.id_0 %></span><span class="identifier-display-part"><%= @collection.id_1 %></span><span class="identifier-display-part"><%= @collection.id_2 %></span><span class="identifier-display-part"><%= @collection.id_3 %></span>
+          </div>
+       </div>
     </div>
   </div>
 </div>
