Have the backend throw an error when it can't find an existing session.
Have the UI automatically catch it and invalid the user's session.

--- a/frontend/app/views/welcome/index.html.erb
+++ b/frontend/app/views/welcome/index.html.erb
@@ -1,4 +1,10 @@
 <div class="row-fluid">
+   <% if flash[:error] %>
+      <div class="alert alert-error">
+         <%= flash[:error] %>
+      </div>
+   <% end %>
+
    <div class="span12">
       <h1>Welcome to ArchivesSpace</h1>
       <p>This is where something will go.</p>
