added in jekyll bootstrap files

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,6 @@
-<html>
-	<body>
-		<div id="main">
-			{{content}}
-		</div>
-	</body>
-</html>
+---
+theme :
+  name : twitter
+---
+{% include JB/setup %}
+{% include themes/twitter/default.html %}
