--- a/frontend/app/views/collections/_form_container.html.erb
+++ b/frontend/app/views/collections/_form_container.html.erb
@@ -9,8 +9,8 @@
     <!-- <li><a href="#finding-aid" data-toggle="tab">Finding Aid</a></li>
     <li><a href="#dates" data-toggle="tab">Dates</a></li>
     <li><a href="#names" data-toggle="tab">Names</a></li>
-    <li><a href="#subjects" data-toggle="tab">Subjects</a></li> -->
-    <li><a href="#accessions" data-toggle="tab">Accessions</a></li>
+    <li><a href="#subjects" data-toggle="tab">Subjects</a></li>
+    <li><a href="#accessions" data-toggle="tab">Accessions</a></li> -->
   </ul>
   <div class="tab-content">
     <div class="tab-pane active" id="basic-information">
@@ -27,9 +27,9 @@
     </div>
     <div class="tab-pane" id="subjects">
       <div class="well">Subjects selector/list here...</div>
-    </div> -->
+    </div>
     <div class="tab-pane" id="accessions">
       <div class="well">Accessions selector/list here... TODO</div>
-    </div>
+    </div> -->
   </div>
 </div>
