--- a/frontend/app/views/shared/_header.html.erb
+++ b/frontend/app/views/shared/_header.html.erb
@@ -13,7 +13,7 @@
             <li <% if controller_name === "welcome" %>class="active"<% end %>>
                <%= link_to raw('<span class="icon-home icon-white"></span>'), :controller=>:welcome, :action=>:index %>
             </li>
-            <li class="dropdown">
+            <li class="dropdown browse-container">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Browse <b class="caret"></b></a>
               <ul class="dropdown-menu">
                 <li><%= link_to "Accessions", :controller=>:accessions, :action=>:index %></li>
@@ -22,7 +22,7 @@
                 <li><%= link_to "Subjects", :controller=>:subjects, :action=>:index %></li>                
               </ul>
             </li>
-            <li class="dropdown">
+            <li class="dropdown create-container">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Create <b class="caret"></b></a>
               <ul class="dropdown-menu">
                 <li><%= link_to "Accession", :controller=>:accessions, :action=>:new %></li>
