Implementation of new subjects and terms based on initial designs.

--- a/frontend/app/assets/stylesheets/archivesspace/form.less
+++ b/frontend/app/assets/stylesheets/archivesspace/form.less
@@ -32,6 +32,10 @@
   float: right;
 }
 
+.linker-list {
+	max-height: 240px;
+}
+
 .linker-list ul {
    margin: 0;
    list-style: none;
@@ -56,4 +60,13 @@
             .border-radius(0 @inputBorderRadius @inputBorderRadius 0);
          }
       }
+}
+
+#new_subject .terms-container .row-fluid {
+	margin-bottom: 5px;
+}
+
+.inputs-fill-it-up input,
+.inputs-fill-it-up select {
+	width: 100%;
 }
