--- a/frontend/app/views/subjects/edit.html.erb
+++ b/frontend/app/views/subjects/edit.html.erb
@@ -1,10 +1,10 @@
-<%= render :partial=>"shared/breadcrumb", :locals=>{:trail=>[link_to("Browse Subjects", :controller=>:subjects, :action=>:index), link_to(@subject.term, :controller=>:subjects,:action=>:show, :id=>@subject.id), "Edit"]} %>
+<%= render :partial=>"shared/breadcrumb", :locals=>{:trail=>[link_to("Browse Subjects", :controller=>:subjects, :action=>:index), link_to(@subject.display_string, :controller=>:subjects,:action=>:show, :id=>@subject.id), "Edit"]} %>
 <div class="row-fluid">
    <div class="span3">
       <div class="well"></div>
    </div>
    <div class="span9">
-      <h2><%= @subject.term %>  <span class="label label-info">Subject</span></h2>
+      <h2><%= @subject.display_string %>  <span class="label label-info">Subject</span></h2>
       <br/>
       <%= form_for @subject, :as => "subject", :url=>{:action=>:update}, :html=>{:class=>'form-horizontal'} do |f| %>
          <%= render :partial=>"subjects/form", :locals=>{:f => f} %>
