Don't pull in the entire Bootstrap framework in application.less.
Makes less templates significantly faster in development mode.

--- a/frontend/app/assets/stylesheets/archivesspace.less
+++ b/frontend/app/assets/stylesheets/archivesspace.less
@@ -1,3 +1,6 @@
+@iconSpritePath: asset-path('twitter/bootstrap/glyphicons-halflings.png');
+@iconWhiteSpritePath: asset-path('twitter/bootstrap/glyphicons-halflings-white.png');
+
 @import "archivesspace/common";
 @import "archivesspace/header";
 @import "archivesspace/token-input";
