--- a/frontend/app/assets/stylesheets/themes/red/application.less
+++ b/frontend/app/assets/stylesheets/themes/red/application.less
@@ -1,5 +1,5 @@
-// twitter bootstrap
-@import "bootstrap";
+@import "twitter/bootstrap/variables";
+@import "twitter/bootstrap/mixins";
 
 // red skin
 @import "themes/red/red";
