--- a/frontend/app/assets/stylesheets/themes/slate/application.less
+++ b/frontend/app/assets/stylesheets/themes/slate/application.less
@@ -1,8 +1,6 @@
-// twitter bootstrap
-@import "bootstrap";
-
 // slate skin
 @import "themes/slate/variables";
+@import "twitter/bootstrap/mixins";
 @import "themes/slate/bootswatch";
 
 .archives-tree a {
