--- a/frontend/app/views/layouts/application.html.erb
+++ b/frontend/app/views/layouts/application.html.erb
@@ -3,6 +3,7 @@
 <head>
   <title>ArchivesSpace | <%= controller.class.name %> >> <%= controller.action_name %></title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <%= stylesheet_link_tag    "themes/#{session[:theme]}/bootstrap", :media => "all" %>
   <%= stylesheet_link_tag    "themes/#{session[:theme]}/application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= include_controller_js %>
