--- a/frontend/app/assets/stylesheets/themes/default/application.less
+++ b/frontend/app/assets/stylesheets/themes/default/application.less
@@ -1,5 +1,6 @@
 // twitter bootstrap
-@import "bootstrap";
+@import "twitter/bootstrap/variables";
+@import "twitter/bootstrap/mixins";
 
 // default skin
 @import "themes/default/default";
