--- a/frontend/app/assets/stylesheets/themes/default/bootstrap.less
+++ b/frontend/app/assets/stylesheets/themes/default/bootstrap.less
@@ -4,5 +4,7 @@
 @import "twitter/bootstrap/variables";
 @import "twitter/bootstrap/mixins";
 
+@import "themes/default/default";
+
 @iconSpritePath: asset-path('twitter/bootstrap/glyphicons-halflings.png');
 @iconWhiteSpritePath: asset-path('twitter/bootstrap/glyphicons-halflings-white.png');
