Reworked the user creation and authentication system.
  * Now have a JSONModel for users, living at /users.  POST to /users to create
    a user and set their password, POST to /users/:username/login to
    authenticate.

  * Added a new form to the frontend for account creation, and a link from the
    "Sign in" dropdown to let people self-register.

  * Modified the DB schema for users to match the JSON schema.

  * Reworked the unit tests to support the new URL scheme.

  * Selenium tests

--- a/frontend/app/assets/stylesheets/archivesspace/header.less
+++ b/frontend/app/assets/stylesheets/archivesspace/header.less
@@ -74,3 +74,15 @@
    line-height: @baseLineHeight;
    background-color: @navbarBackground;
 }
+
+.dropdown-menu {
+   .boring-link {
+      display: inline;
+      padding: 0;
+      clear: none;
+      font-weight: normal;
+      line-height: @baseLineHeight;
+      color: @linkColor;
+      white-space: normal;
+   }
+}
