--- a/frontend/app/views/shared/_header_user.html.erb
+++ b/frontend/app/views/shared/_header_user.html.erb
@@ -20,6 +20,7 @@
          </div>
          <input class="btn btn-primary" type="submit" name="commit" value="Sign In" id="login" />
        <% end %>
+       <p>Need an account?  <%= link_to "Register now", {:controller=>"users"}, :class => "boring-link" %></p>
     </div>
   </li>
 <% end %>
