--- a/frontend/app/views/shared/_templates.html.erb
+++ b/frontend/app/views/shared/_templates.html.erb
@@ -29,8 +29,7 @@
    </div>
 --></div>
 <div id="linker_createmodal_template"><!--
-   <div class="modal-body linker-container">
-   </div>
+   <div class="modal-body linker-container"></div>
    <div class="modal-footer">
       <button id="createAndLinkButton" class="btn btn-primary">Create and Link to ${name}</button>
       <button class="btn btn-cancel" data-dismiss="modal">Cancel</button>
