Clean up navbar and themes to sync with new bootstrap 2.1.0 styles

--- a/frontend/app/assets/stylesheets/archivesspace/header.less
+++ b/frontend/app/assets/stylesheets/archivesspace/header.less
@@ -63,7 +63,7 @@
    padding: 4px 9px;
    display: inline-block;
    vertical-align: middle;
-   margin: 0 !important;
+   margin: 5px 0 !important;
    .box-shadow(~"inset 0 1px 2px rgba(0,0,0,.1), 0 1px 0 rgba(255,255,255,.15)");
    .border-radius(4px 0 0 4px);
    #font > .sans-serif(13px, normal, 1);
