--- a/frontend/app/views/shared/_header_repository.html.erb
+++ b/frontend/app/views/shared/_header_repository.html.erb
@@ -1,7 +1,7 @@
 <% if session[:user] %>
    <li class="dropdown repository-container">  
      <div class="input-append">
-        <span class="repository-label"><span class=" icon-hdd icon-white"></span> <span class="current-repository-id"><% if session[:repo] %><%= session[:repo] %><% end %></span></span><a class="btn btn-inverse dropdown-toggle last" data-toggle="dropdown" href="#"><span class="caret"></span></a>
+        <span class="repository-label"><span class=" icon-hdd"></span> <span class="current-repository-id"><% if session[:repo] %><%= session[:repo] %><% end %></span></span><a class="btn dropdown-toggle last" data-toggle="dropdown" href="#"><span class="caret"></span></a>
           <ul class="dropdown-menu">
             <% if session[:repo] %>
                <%#><li><a href="#">Edit</a></li>
