--- a/frontend/app/assets/stylesheets/archivesspace/common.less
+++ b/frontend/app/assets/stylesheets/archivesspace/common.less
@@ -12,7 +12,7 @@ h2 > .label {
 
 .breadcrumb {
    margin-top: -@baseLineHeight+2;
-   .border-radius(0 0 3px 3px);
+	.box-shadow(~"inset 0 -1px 0 rgba(0,0,0,.05), 0 1px 10px rgba(0,0,0,.05)");
 }
 
 .navbar .brand {
@@ -90,4 +90,9 @@ h2 > .label {
 
 .tab-content {
    overflow: visible;
+}
+
+.input-append .dropdown-menu, 
+.input-prepend .dropdown-menu {
+	font-size: @baseFontSize;
 }
