--- a/frontend/app/views/subjects/_form.html.erb
+++ b/frontend/app/views/subjects/_form.html.erb
@@ -18,7 +18,7 @@
 
 <div id="subjects_term_template"><!--
    <div class="row-fluid inputs-fill-it-up">
-      <div class="span5"><input type="text" name="subject[terms][][term]" data-provide="typeahead" data-source="<%= @subject.available_terms.collect{|t| t['term']}.to_json %>" autocomplete="off" /></div>
+      <div class="span5"><input type="text" name="subject[terms][][term]" data-source="<%= @subject.available_terms.to_json %>" autocomplete="off" /></div>
       <div class="span5">
          <select name="subject[terms][][term_type]">
             <% JSONModel(:term).schema["properties"]["term_type"]["enum"].each do |option| %>
