fix up styles for linker  due to 2.1.0 introduction

--- a/frontend/app/assets/stylesheets/archivesspace/form.less
+++ b/frontend/app/assets/stylesheets/archivesspace/form.less
@@ -50,12 +50,14 @@
    background-color: #F1f1f1;
 }
 .linker-wrapper.input-append {
-      width: 428px;
+      float: left;
+      width: 420px;
       .token-input-list {
          float: left;
       }
       .btn-group {
-         float:left;
+         float: left;
+         left: -1px;
          .btn {
             .border-radius(0 @inputBorderRadius @inputBorderRadius 0);
          }
